@@ -2157,6 +2157,9 @@ for i = 1,#order do output[i] = data[order[i]] end
 way enables applying the same permutation to multiple arrays.
 This function is used by the sort plugin.</p>
 </li>
+<li><p class="first"><tt class="docutils literal">for link,item in utils.listpairs(list)</tt></p>
+<p>Iterates a df-list structure, for example <tt class="docutils literal">df.global.world.job_list</tt>.</p>
+</li>
 <li><p class="first"><tt class="docutils literal">utils.assign(tgt, src)</tt></p>
 <p>Does a recursive assignment of src into tgt.
 Uses <tt class="docutils literal">df.assign</tt> if tgt is a native object ref; otherwise
